--- a/frontend/src/assets/css/home/section6.css
+++ b/frontend/src/assets/css/home/section6.css
@@ -1,5 +1,5 @@
 .types_container_wrapper{
-    background-image: url('public/images/home/banner_type.png');
+    background-image: url('images/home/banner_type.png');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
