--- a/frontend/src/assets/css/home/section1.css
+++ b/frontend/src/assets/css/home/section1.css
@@ -55,11 +55,15 @@
 }
 .video-container {
     position: relative;
-    width: 900px;
+    width: 800px;
+    height: 400px;
     max-width: 100%;
-    border-radius: 10px;
+    border-radius: 20px;
+    overflow: hidden;
 }
-
+.video_container_wrapper .section1_swiper_img{
+    object-fit: contain;
+}
 video {
     width: 100%;
     display: block;
