--- a/frontend/src/assets/css/compt/compt.css
+++ b/frontend/src/assets/css/compt/compt.css
@@ -134,3 +134,8 @@
     border: 2px solid #060606;
     border-radius: 10px;
   }
+
+  .text_style_link{
+    text-decoration: none !important;
+    color: white;
+  }
