--- a/frontend/src/assets/css/home/register.css
+++ b/frontend/src/assets/css/home/register.css
@@ -10,3 +10,98 @@
     width: 100%;
     text-align: left;
 }
+
+.notification-banner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    z-index: 1000;
+    animation: slideDown 0.3s ease-out;
+    display: flex;
+    justify-content: center;
+}
+
+
+.notification-banner .card {
+    width: 330px;
+    height: 80px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    padding: 10px 15px;
+    background-color: #ffffff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    gap: 15px;
+}
+
+.notification-banner .wave {
+    position: absolute;
+    transform: rotate(90deg);
+    left: -31px;
+    top: 32px;
+    width: 80px;
+    fill: #04e4003a;
+}
+
+.notification-banner .icon-container {
+    width: 35px;
+    height:22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #04e40048;
+    border-radius: 50%;
+    margin-left: 8px;
+}
+
+.notification-banner .icon {
+    width: 17px;
+    height: 17px;
+    color: #269b24;
+}
+
+.notification-banner .message-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    flex-grow: 1;
+}
+
+.notification-banner .message-text,
+.notification-banner .sub-text {
+    margin: 0;
+    cursor: default;
+}
+
+.notification-banner .message-text {
+    color: #269b24;
+    font-size: 17px;
+    font-weight: 700;
+}
+
+.notification-banner .sub-text {
+    font-size: 14px;
+    color: #555;
+    text-align: left !important;
+}
+
+.notification-banner .cross-icon {
+    width: 18px;
+    height: 18px;
+    color: #555;
+    cursor: pointer;
+}
+.submit_registration_btn{
+    background-color: rgb(89, 175, 236) !important;
+    color: white !important;
+    border-radius: 20px !important;
+    padding: 7px 35px !important;
+}
