updated build and url api

--- a/frontend/src/assets/css/home/section1.css
+++ b/frontend/src/assets/css/home/section1.css
@@ -61,7 +61,7 @@
     overflow: hidden;
 }
 .video_container_wrapper .section1_swiper_img{
-    object-fit: contain;
+    object-fit: cover;
 }
 video {
     width: 100%;
