--- a/frontend/src/assets/css/compt/compt.css
+++ b/frontend/src/assets/css/compt/compt.css
@@ -139,3 +139,15 @@
     text-decoration: none !important;
     color: white;
   }
+
+  .polygon-with-radius {
+    width: 300px;
+    height: 300px;
+    background: lightblue;  /* Background color */
+    -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,1) 25%, rgba(0,0,0,0) 50%);
+    mask-image: radial-gradient(circle, rgba(0,0,0,1) 25%, rgba(0,0,0,0) 50%);
+    mask-composite: exclude;
+    clip-path: polygon(50% 0, 100% 46%, 82% 100%, 18% 100%, 0 44%);
+    border-radius: 20px;  /* Apply border-radius to simulate rounded corners */
+  }
+  
